Got main menu on mobile to look almost ok, layout is good, loader needs to still be fixed

--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,42 @@
             padding: 5px;
         }
         
+        .mobile .studyGuideDropdown {
+            /*display: flex;
+            flex-direction: row;
+            align-items: center;
+            /*justify-content: space-evenly;
+            align-items: center;*/
+            display: table-row;
+            padding: 0;
+        }
+        
+        .mobile .studyGuideDropdown>.toggleButtonTDWrapper,
+        .mobile .studyGuideDropdown>h2 {
+            display: table-cell;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+        
+        .mobile .studyGuideDropdown>h2 {
+            padding-left: 1em;
+        }
+        /*Allow the hover to be applied on both desktop and mobile*/
+        
+        .studyGuideDropdown:hover .toggleButton {
+            background-color: rgb(0, 208, 255);
+            cursor: pointer;
+        }
+        
+        .studyGuideDropdown:hover h2 {
+            color: rgb(0, 180, 255);
+            cursor: pointer;
+        }
+        
         .toggleButton:before {
             padding-top: 100%;
         }
@@ -220,24 +256,8 @@
             border-radius: 25px;
         }
         
-        .toggleButton:hover {
-            cursor: pointer;
-            background-color: rgb(0, 208, 255);
-        }
-        /*h2:hover {
-            cursor: pointer;
-            color: rgb(0, 180, 255);
-        }*/
-        
-        .toggleButton:hover+h2 {
-            color: rgb(0, 180, 255);
-        }
-        /*.toggleButton:has(+h2:hover) {
-            color: rgb(0, 180, 255);
-        }*/
-        
         .mobile .toggleButton {
-            display: inline-table;
+            /*display: inline-table;*/
             margin: 5px;
             text-align: center;
             float: none;
@@ -252,25 +272,6 @@
         
         .mobile .tableOfContents {
             margin: 0 auto;
-        }
-        
-        .mobile .studyGuideDropdown {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            /*justify-content: space-evenly;
-            align-items: center;
-            display: table-row;*/
-            padding: 0;
-        }
-        
-        .mobile .studyGuideDropdown>span.toggleButton,
-        .mobile .studyGuideDropdown>span.toggleButton+h2 {
-            display: table-cell;
-        }
-        
-        .mobile .studyGuideDropdown>span.toggleButton+h2 {
-            padding-left: 1em;
         }
         
         .mobile .studyGuideDropdown .loader {
